--- a/projects/admin-module/src/app/sidemenu/sidemenu.component.html
+++ b/projects/admin-module/src/app/sidemenu/sidemenu.component.html
@@ -1,11 +1,13 @@
 <mat-sidenav-container class="full-height" autosize="true">
-  <mat-sidenav mode="side" opened (click)="toggleSidebar()">
+  <mat-sidenav mode="side" [opened]="opened" (click)="toggleSidebar()">
       
-      <!-- <div mat-menu-item (click)="toggleSidebar()" class="with-icon padded">
-          <mat-icon matTooltip="toggle side menu">menu</mat-icon>&nbsp;
-      </div> -->
+      <div mat-menu-item class="with-icon padded" (click)="$event.stopPropagation()">
+        <div class="logo-nav" [hidden]="collapse">
+            <img class="image" src="../../assets/icons/Nikon-Logo.png">
+        </div>
+      </div>
 
-      <div mat-menu-item *ngFor="let i of sideMenu" [routerLink]="['admin/', i.route]" class="with-icon padded" (click)="$event.stopPropagation()">
+      <div mat-menu-item *ngFor="let i of sideMenu; let in=index" [routerLink]="['admin/', i.route]" class="with-icon padded" (click)="$event.stopPropagation()">
           <mat-icon [matTooltip]="i.toolTip">{{ i.icon }}</mat-icon>&nbsp;
           <span [hidden]="collapse">{{ i.name }}</span>
       </div>
