--- a/projects/admin-module/src/app/toolbar/toolbar.component.html
+++ b/projects/admin-module/src/app/toolbar/toolbar.component.html
@@ -1,14 +1,50 @@
-<mat-toolbar color="medium">
-    <div class="d-flex align-items-center">
-        <mat-icon [routerLink]="['admin/home']">home</mat-icon>
-            <div style="text-align: justify;">
-                <span>Nikon</span>
-                <p><sup>Stay Home & Stay Safe</sup></p>
+<div class="w-100 border-bottom">
+    <mat-toolbar class="row p-0 m-0 sticky-top bg-white" *ngIf="current_url[2] !='login' && current_url[2] != 'logout'">
+            <div class="col-12 align-items-center d-flex py-3">
+                <mat-icon class="bg-white border-0 pointer no-outline p-0" (click)="toggle()">list</mat-icon>
+                <div class="pl-3 pointer no-outline">
+                    <p class="m-0">Nikon <br>
+                    <span class="slogan" style="color: grey;">Stay Home & Stay Safe</span>
+                    </p>
+                </div>
+                <div class="ml-auto">
+                    <mat-icon class="bg-white border-0 pointer no-outline p-0" [routerLink]="['/']">notifications</mat-icon>
+                    <mat-icon class="bg-white border-0 pointer no-outline p-0 ml-3" [routerLink]="['/']">logout</mat-icon>
+                </div>
             </div>
-    </div>
+        
+</mat-toolbar>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--<div>
+<mat-toolbar color="medium" *ngIf="current_url[2] !='login' && current_url[2] != 'logout'">
+    <div class="d-flex align-items-center">
+        <div class="flex-shrink-0">
+            <mat-icon (click)="toggle()">list</mat-icon>
+        </div> &nbsp; &nbsp;
+        <div class="flex-grow-1">
+            <p class="m-0">Nikon</p>
+            <p class="slogan">Stay Home & Stay Safe</p>  
+        </div>
+      </div>
 
     <div>
     <mat-icon [routerLink]="['/']">notifications</mat-icon> &nbsp; &nbsp;
     <mat-icon [routerLink]="['/']">logout</mat-icon>
     </div>
 </mat-toolbar>
+</div>
+-->
