--- a/projects/admin-module/src/app/toolbar/toolbar.component.scss
+++ b/projects/admin-module/src/app/toolbar/toolbar.component.scss
@@ -6,3 +6,13 @@
   .mat-icon {
     cursor: pointer;
   }
+
+  .slogan {
+    font-size: small;
+    font-weight: lighter;
+    
+  }
+
+  .m-0 {
+    line-height: 1;
+  }
